--- a/code/nuovo_var_transformation.ipynb
+++ b/code/nuovo_var_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -81,18 +81,18 @@
     "            linewidths=0.5,          # Larghezza delle linee che separano i quadrati\n",
     "            linecolor='white')       # Colore delle linee tra i quadrati\n",
     "\n",
+    "#insert_name\n",
+    "plt.savefig('plots/correlation_matrix.png', bbox_inches='tight', dpi=300)\n",
+    "\n",
     "# Visualizzare il grafico\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "\n",
-    "\n",
-    "#insert_name\n",
-    "plt.savefig('plots/correlation_matrix.png')\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\noemi\\AppData\\Local\\Temp\\ipykernel_13996\\1067430613.py:2: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
+      "C:\\Users\\noemi\\AppData\\Local\\Temp\\ipykernel_5688\\1067430613.py:2: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
       "  skewness = df_pp.apply(lambda col: skew(col[col != 0], nan_policy='omit') if col.dtypes != 'object' else None)\n"
      ]
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\noemi\\AppData\\Local\\Temp\\ipykernel_13996\\1453300317.py:2: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
+      "C:\\Users\\noemi\\AppData\\Local\\Temp\\ipykernel_5688\\1453300317.py:2: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
       "  new_skewness = df_transformed.apply(lambda col: skew(col, nan_policy='omit') if col.dtypes != 'object' else None)\n"
      ]
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
