--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -16,6 +16,10 @@ All the variables of the dataset are introduced and explained in Table 1.1 and T
         rating & Ordinal & IMDB title rating class \\
         & & The range is from (0,1] to (9,10] \\ 
         \hline
+        worstRating & Ordinal & Worst title rating \\ 
+        \hline
+        bestRating & Ordinal & Best title rating \\ 
+        \hline
         titleType & Nominal & The format of the title \\ 
         \hline
         canHaveEpisodes & Nominal (Binary) & Whether or not the title can have episodes \\ 
@@ -50,10 +54,6 @@ All the variables of the dataset are introduced and explained in Table 1.1 and T
         awardWins & Numeric & Number of awards the title won \\ 
         \hline
         numVotes & Numeric & Number of votes the title has received \\ 
-        \hline
-        worstRating & Numeric & Worst title rating \\ 
-        \hline
-        bestRating & Numeric & Best title rating \\ 
         \hline
         totalImages & Numeric & Number of Images on the IMDb title page \\ 
         \hline
