log tranformation non più salvata sul dataset

--- a/code/nuovo_var_transformation.ipynb
+++ b/code/nuovo_var_transformation.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# risultati della trasformazione logaritmica\n",
+    "### non salvata direttamente sul dataset, la applicheremo quando serve, ma da qua si vede che servirà"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +74,6 @@
       "isAdult                        16005\n",
       "numRegions                         0\n",
       "userReviewsTotal                9229\n",
-      "ratingCount                        0\n",
       "countryOfOrigin                    0\n",
       "is_Documentary                 14596\n",
       "is_History                     16076\n",
@@ -97,28 +104,7 @@
       "is_Horror                      15743\n",
       "is_Animation                   14944\n",
       "fill_runtimeMinutes                1\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "zero_counts = df_pp.apply(lambda col: (col == 0).sum())\n",
-    "\n",
-    "print(zero_counts)\n",
-    "\n",
-    "#awardWins sarebbero stati 11971 ma li abbiamo aggiunti"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "originalTitle                   0.000000\n",
+      "dtype: int64 originalTitle                   0.000000\n",
       "rating                          0.000000\n",
       "startYear                       0.000000\n",
       "endYear                         0.000000\n",
@@ -135,7 +121,6 @@
       "isAdult                        97.407340\n",
       "numRegions                      0.000000\n",
       "userReviewsTotal               56.168219\n",
-      "ratingCount                     0.000000\n",
       "countryOfOrigin                 0.000000\n",
       "is_Documentary                 88.832086\n",
       "is_History                     97.839450\n",
@@ -171,9 +156,14 @@
     }
    ],
    "source": [
+    "zero_counts = df_pp.apply(lambda col: (col == 0).sum())\n",
     "percentuale_zeri = df_pp.apply(lambda col: (col == 0).sum() / len(col) * 100)\n",
     "\n",
-    "print(percentuale_zeri)"
+    "\n",
+    "\n",
+    "print(zero_counts, percentuale_zeri)\n",
+    "\n",
+    "#awardWins sarebbero stati 11971 ma li abbiamo aggiunti"
    ]
   },
   {
@@ -185,16 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_pp.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,12 +262,12 @@
     "df_pp_transformed = df_pp.copy()\n",
     "df_pp_transformed[columns_to_transform] = df_pp[columns_to_transform].apply(lambda col: np.log1p(col))\n",
     "\n",
-    "df_pp_transformed.to_csv(\"df_pp_log.csv\", index=False, header=True)\n"
+    "#df_pp_transformed.to_csv(\"df_pp_log.csv\", index=False, header=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -356,156 +337,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## prova di Square root tranformation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n# List of variables to apply square root transformation\\nvariables_to_transform_sqrt = [\\n    \\'fill_runtimeMinutes\\', \\'awardWins\\', \\'numVotes\\', \\'totalImages\\',\\n    \\'totalVideos\\', \\'totalCredits\\', \\'criticReviewsTotal\\', \\'awardNominationsExcludeWins\\', \\n    \\'numRegions\\', \\'userReviewsTotal\\', \\'ratingCount\\'\\n]\\n\\n# Apply square root transformation to each variable\\ndef apply_sqrt_transformation(df, variables):\\n    df_transformed_sqrt = df.copy()\\n    for var in variables:\\n        if var in df_transformed_sqrt.columns:\\n            # Ensure no negative values before applying square root\\n            df_transformed_sqrt[var] = np.sqrt(np.maximum(df_transformed_sqrt[var], 0))\\n        else:\\n            print(f\"Warning: Variable \\'{var}\\' not found in the DataFrame.\")\\n    return df_transformed_sqrt\\n\\n# Assuming df_pp is your DataFrame\\ndf_pp_transformed_sqrt = apply_sqrt_transformation(df_pp, variables_to_transform_sqrt)\\n\\n '"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "# List of variables to apply square root transformation\n",
-    "variables_to_transform_sqrt = [\n",
-    "    'fill_runtimeMinutes', 'awardWins', 'numVotes', 'totalImages',\n",
-    "    'totalVideos', 'totalCredits', 'criticReviewsTotal', 'awardNominationsExcludeWins', \n",
-    "    'numRegions', 'userReviewsTotal', 'ratingCount'\n",
-    "]\n",
-    "\n",
-    "# Apply square root transformation to each variable\n",
-    "def apply_sqrt_transformation(df, variables):\n",
-    "    df_transformed_sqrt = df.copy()\n",
-    "    for var in variables:\n",
-    "        if var in df_transformed_sqrt.columns:\n",
-    "            # Ensure no negative values before applying square root\n",
-    "            df_transformed_sqrt[var] = np.sqrt(np.maximum(df_transformed_sqrt[var], 0))\n",
-    "        else:\n",
-    "            print(f\"Warning: Variable '{var}' not found in the DataFrame.\")\n",
-    "    return df_transformed_sqrt\n",
-    "\n",
-    "# Assuming df_pp is your DataFrame\n",
-    "df_pp_transformed_sqrt = apply_sqrt_transformation(df_pp, variables_to_transform_sqrt)\n",
-    "\n",
-    " \"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### skewness e visualizzazione post trasformazione square root"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n# variabili numeriche di df_transformed\\ndf_pp_transformed_sqrt_num = df_pp_transformed_sqrt[['fill_runtimeMinutes','startYear', 'endYear', 'awardWins', 'numVotes', 'totalImages',\\n                'totalVideos', 'totalCredits', 'criticReviewsTotal', 'awardNominationsExcludeWins', \\n                'numRegions', 'userReviewsTotal']]\\n\\n# Ricalcolare la skewness -> questa volta considera anche i valori nulli -> calcola quella totale\\nnew_skewness = df_pp_transformed_sqrt_num .apply(lambda col: skew(col, nan_policy='omit') if col.dtypes != 'object' else None)\\n\\nprint(new_skewness)\\n\\n\""
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " \"\"\"\n",
-    "# variabili numeriche di df_transformed\n",
-    "df_pp_transformed_sqrt_num = df_pp_transformed_sqrt[['fill_runtimeMinutes','startYear', 'endYear', 'awardWins', 'numVotes', 'totalImages',\n",
-    "                 'totalVideos', 'totalCredits', 'criticReviewsTotal', 'awardNominationsExcludeWins', \n",
-    "                 'numRegions', 'userReviewsTotal']]\n",
-    "\n",
-    "# Ricalcolare la skewness -> questa volta considera anche i valori nulli -> calcola quella totale\n",
-    "new_skewness = df_pp_transformed_sqrt_num .apply(lambda col: skew(col, nan_policy='omit') if col.dtypes != 'object' else None)\n",
-    "\n",
-    "print(new_skewness)\n",
-    "\n",
-    " \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nfig, axes = plt.subplots(nrows=len(df_pp_transformed_sqrt_num.columns), ncols=1, figsize=(8, len(df_pp_transformed_sqrt_num.columns) * 3))\\n\\nfor col, ax in zip(df_pp_transformed_sqrt_num.columns, axes):\\n   sns.kdeplot(data=df_pp_transformed_sqrt_num, x=col, ax=ax, fill=True)\\n   ax.set_title(f'Distribuzione square-root transformation di {col}')\\n   ax.set_ylabel('Densità')\\n\\nplt.tight_layout()\\n#plt.show()\\n\\n\""
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " \"\"\"\n",
-    "fig, axes = plt.subplots(nrows=len(df_pp_transformed_sqrt_num.columns), ncols=1, figsize=(8, len(df_pp_transformed_sqrt_num.columns) * 3))\n",
-    "\n",
-    "for col, ax in zip(df_pp_transformed_sqrt_num.columns, axes):\n",
-    "    sns.kdeplot(data=df_pp_transformed_sqrt_num, x=col, ax=ax, fill=True)\n",
-    "    ax.set_title(f'Distribuzione square-root transformation di {col}')\n",
-    "    ax.set_ylabel('Densità')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "#plt.show()\n",
-    "\n",
-    " \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['originalTitle', 'rating', 'startYear', 'endYear', 'runtimeMinutes',\n",
-       "       'awardWins', 'numVotes', 'totalImages', 'totalVideos', 'totalCredits',\n",
-       "       'criticReviewsTotal', 'titleType', 'awardNominationsExcludeWins',\n",
-       "       'canHaveEpisodes', 'isAdult', 'numRegions', 'userReviewsTotal',\n",
-       "       'ratingCount', 'countryOfOrigin', 'is_Documentary', 'is_History',\n",
-       "       'is_Adventure', 'is_Thriller', 'is_Game-Show', 'is_Comedy', 'is_Sci-Fi',\n",
-       "       'is_Romance', 'is_Biography', 'is_Musical', 'is_Western', 'is_Music',\n",
-       "       'is_Film-Noir', 'is_Adult', 'is_Reality-TV', 'is_News', 'is_Action',\n",
-       "       'is_Crime', 'is_Short', 'is_Fantasy', 'is_Family', 'is_Mystery',\n",
-       "       'is_Talk-Show', 'is_Drama', 'is_Sport', 'is_War', 'is_Horror',\n",
-       "       'is_Animation', 'fill_runtimeMinutes'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_pp_log = pd.read_csv(\"df_pp_log.csv\")\n",
-    "df_pp_log.columns"
    ]
   }
  ],
